docs(worklog): 同步 studio 计划与日志记录

--- a/docs/worklog/2026-02-20.md
+++ b/docs/worklog/2026-02-20.md
@@ -491,3 +491,169 @@
   - 两次 commit 均通过 staged secret scan。
 - 备注:
   - 后续若需要也可将 `.claude/settings.json` 与 `docs/原型.html` 单独作为本地文件管理策略提交/忽略。
+
+## 23) 本地文件忽略规则补充
+- 对话目标:
+  - 将 `.claude/` 与 `docs/原型.html` 设为 Git 忽略，避免在状态列表中持续出现。
+- 执行内容:
+  - 更新 `.gitignore`，新增：
+    - `.claude/`
+    - `docs/原型.html`
+  - 复核 `git status`，确认两者不再显示为未跟踪文件。
+- 修改文件:
+  - `.gitignore`
+  - `docs/worklog/2026-02-20.md`
+- 验证结果:
+  - `git status --short` 中仅剩 `.gitignore` 的已修改状态；目标忽略项已生效。
+- 备注:
+  - 当前忽略为仓库级规则，团队成员拉取后同样生效。
+
+## 24) SAVC Studio 接口对齐并入 `savc-ui`
+- 对话目标:
+  - 将 `SAVC Studio · 统一交互工作台` 并入 `savc-ui`，完成同源接口对齐、入口收敛与高权限接口本地来源限制。
+- 执行内容:
+  - 新增页面：`savc-ui/public/studio/index.html`（由 `tests/Claude-ui-test/index.html` 迁移）。
+  - 将页面 API 基地址从硬编码 `http://localhost:5174` 改为同源 `window.location.origin`，并增加 `?savcBase=` 覆盖参数。
+  - 将终端 WS 地址改为根据当前协议自动计算（`ws://` / `wss://`）并支持 `?savcBase=` 覆盖。
+  - 在 `savc-ui/vite.config.ts` 增加入口重定向：`/studio`、`/studio/`、`/workbench`、`/workbench/`、`/workbench/index.html` -> `/studio/index.html`。
+  - 对高权限 HTTP 接口增加本地来源限制（返回 `forbidden_remote`）：
+    - `POST /__savc/fs/write`
+    - `POST /__savc/git/add`
+    - `POST /__savc/git/commit`
+    - `POST /__savc/terminal/exec`
+  - 终端 WS 升级入口改为复用同一本地来源判定逻辑。
+  - 更新文档路径与联调说明：
+    - `docs/SAVC统一交互工作台开发计划.md`
+    - `docs/SAVC实际运行联调执行计划.md`
+- 修改文件:
+  - `savc-ui/public/studio/index.html`
+  - `savc-ui/vite.config.ts`
+  - `docs/SAVC统一交互工作台开发计划.md`
+  - `docs/SAVC实际运行联调执行计划.md`
+  - `docs/worklog/2026-02-20.md`
+- 验证结果:
+  - `pnpm --dir savc-ui exec tsc -p tsconfig.json --noEmit` 通过。
+  - `pnpm --dir savc-ui build` 通过。
+  - `GET /studio/` 返回 `302 -> /studio/index.html`。
+  - `GET /workbench/` 返回 `302 -> /studio/index.html`。
+  - `GET /studio/index.html` 返回 `200`。
+  - `GET /__savc/fs/tree`、`GET /__savc/fs/read`、`GET /__savc/git/status` 返回 `ok=true`。
+  - 本地来源访问高权限接口可达（示例：`POST /__savc/terminal/exec` 返回 `ok=true`）。
+  - 非本地来源访问高权限接口返回 `forbidden_remote`（通过 `http://192.168.5.20:5174` 实测）。
+  - `WS /__savc/terminal` 本地可连通并执行命令；非本地连接被拒绝。
+- 备注:
+  - 测试期间 `savc-ui` 监听于 `:5174`（dev server）。
+
+## 25) SAVC Studio 去 Mock：接入真实 runtime/progress 数据与 API
+- 对话目标:
+  - 将 `savc-ui/public/studio/index.html` 中残留的 Mock/静态示例替换为真实数据驱动，并清理不必要静态内容。
+- 执行内容:
+  - 清理冲突脚本：删除后置重复的 `companionSend/devSend/escHtml` Mock 版本，保留真实 API 版本（`task-runtime create/control`）。
+  - 补齐真实渲染链路：
+    - 新增 VSCode 状态栏运行态渲染（错误/重试计数、分支名联动）。
+    - 新增监控依赖图动态渲染（Orchestrator/Memory/Voice/TTS/Live2D 节点与连线按模块状态更新）。
+    - 优化监控日志 agent 归类与过滤，基于 runtime 事件实时生成。
+  - 清理静态样例数据：
+    - 会话卡默认假数据改为空态占位。
+    - VSCode 浮窗的静态文件树、静态 Git 列表、静态代码片段、静态终端日志改为加载占位与实时 API 拉取。
+  - 稳定性小修：`showVSCode()` 补充 `display` 恢复，避免隐藏后无法再显示。
+- 修改文件:
+  - `savc-ui/public/studio/index.html`
+  - `docs/worklog/2026-02-20.md`
+- 验证结果:
+  - `pnpm --dir savc-ui exec tsc -p tsconfig.json --noEmit` 通过。
+  - `pnpm --dir savc-ui exec vite build` 通过。
+  - 文本检索确认无残留关键 Mock 逻辑（`getReply`、旧 `sessions/LOG_POOL/YUANYUAN_REPLIES`、重复 `companionSend/devSend`）。
+- 备注:
+  - Live2D 面板仍保留 `mock/gateway` 模式切换入口作为调试功能；其显示状态已与实时数据面板解耦。
+
+## 26) 端口口径确认（管理系统 vs Studio）
+- 对话目标:
+  - 确认 `5174` 是否为 SAVC 管理系统服务端口，并厘清与 Studio 页面的关系。
+- 执行内容:
+  - 检查 `http://127.0.0.1:5174/` 返回内容；
+  - 检查 `http://127.0.0.1:5174/studio/` 路由与页面标题。
+- 修改文件:
+  - `docs/worklog/2026-02-20.md`
+- 验证结果:
+  - `/` 页面标题为 `SAVC 管理界面`；
+  - `/studio/` 返回 `302 -> /studio/index.html`，页面标题为 `SAVC Studio · 统一交互工作台`。
+- 备注:
+  - 结论：`5174` 为 `savc-ui` 统一端口，管理系统与 Studio 通过不同路径共用同一服务。
+
+## 27) Studio 消息流隔离修复（陪伴/开发不再串线）
+- 对话目标:
+  - 修复“陪伴聊天消息与开发消息处理串线”的问题，确保两条消息流独立。
+- 执行内容:
+  - 将单一 `selectedTaskId` 改为双上下文：`selectedTaskIds.companion` 与 `selectedTaskIds.dev`。
+  - 新增会话域判定与过滤函数：`channelScope`、`activeSessionScope`、`sortedTasksByScope`、`scopedEvents`。
+  - 重构渲染逻辑：
+    - `renderCompanionMessages` 仅消费 `companion` 域事件；
+    - `renderDevMessages`、`renderToolList`、`renderToolTrace`、`renderStats` 仅消费 `dev` 域事件；
+    - 右侧“当前会话”卡固定绑定开发域会话，避免被陪伴会话覆盖。
+  - 侧栏会话列表改为按当前视图切换作用域（陪伴页显示陪伴会话，开发页显示开发会话）。
+  - `createRuntimeTaskFromInput` 按 channel 写入对应域的选中任务；`selectSession` 按当前域选中；`switchView` 切换后立即重绘，确保视图一致。
+- 修改文件:
+  - `savc-ui/public/studio/index.html`
+  - `docs/worklog/2026-02-20.md`
+- 验证结果:
+  - `node` 内联脚本语法检查通过（`inline script syntax ok`）。
+  - `pnpm --dir savc-ui exec vite build` 通过。
+- 备注:
+  - 当前域划分规则：`channel=companion` 归陪伴域，其余归开发域；如后续需要把 Telegram/Discord 并入陪伴域，可在 `channelScope()` 统一调整。
+
+## 28) Studio 陪伴对话接入真实 LLM（替换 mock 回复链）
+- 对话目标:
+  - 解决“陪伴聊天仍是 mock 数据、未调用 LLM”的问题，将陪伴输入改为真实模型调用。
+- 执行内容:
+  - 在 `savc-ui/vite.config.ts` 新增本地受限接口：`POST /__savc/llm/chat`。
+    - 服务端通过 `node openclaw/openclaw.mjs agent --local --json` 执行真实对话；
+    - 兼容 CLI 警告前缀输出，新增 `parseJsonFromMixedOutput()` 解析混合 stdout；
+    - 返回结构化 reply：`text/provider/model/durationMs/sessionId`。
+  - 在 `savc-ui/public/studio/index.html` 将陪伴发送链路从 runtime demo 改为真实 LLM：
+    - 新增 `requestCompanionLlmReply()` 调用 `/__savc/llm/chat`；
+    - `companionSend()` 改为写入用户消息 -> 调用 LLM -> 写入 assistant 实际回复；
+    - 不再把陪伴输入伪装成 `task-runtime queued/running` 消息。
+  - 陪伴显示收敛：
+    - `renderCompanionMessages()` 改为优先展示本地真实对话消息，不混入 runtime 队列事件；
+    - 陪伴侧栏在无 runtime 任务时可回显本地会话预览。
+  - 同步确认截图中的静态词条（`dev_channel/telegram_bot/你是什么模型`）仅存在于 `tests/Claude-ui-test/index.html` 原型页，不在 `/studio/index.html`。
+- 修改文件:
+  - `savc-ui/vite.config.ts`
+  - `savc-ui/public/studio/index.html`
+  - `docs/worklog/2026-02-20.md`
+- 验证结果:
+  - `pnpm --dir savc-ui exec tsc -p tsconfig.json --noEmit` 通过。
+  - `pnpm --dir savc-ui exec vite build` 通过。
+  - 实测 `POST /__savc/llm/chat` 返回：
+    - `ok=true`
+    - `reply.text=LLM_OK`
+    - `reply.provider=openai-codex`
+    - `reply.model=gpt-5.2`
+- 备注:
+  - `tests/Claude-ui-test/index.html` 仍是原型页（含历史 mock 内容），正式联调入口应使用 `http://127.0.0.1:5174/studio/`。
+
+## 29) Studio 全链路接入：陪伴+开发均接真实 LLM，并回写 runtime 状态
+- 对话目标:
+  - 按“全部都接上”要求，将 Studio 的陪伴与开发两条消息链都接入真实 LLM，并同步任务运行态，不再保留“开发仅 runtime 占位文案”模式。
+- 执行内容:
+  - 前端链路统一：
+    - 将 `requestCompanionLlmReply()` 收敛为通用 `requestLlmReply(scope, text)`；
+    - `companionSend()` 与 `devSend()` 均改为真实 LLM 调用；
+    - 新增 `syncRuntimeTaskOutcome()`，将 LLM 成功/失败结果回写到 `task-runtime`（`succeeded/failed`）；
+    - `createRuntimeTaskFromInput()` 返回 `taskId`，用于后续状态闭环。
+  - 陪伴与开发均具备“LLM + runtime”双轨：
+    - 输入后先创建运行态任务（失败不阻断 LLM）；
+    - LLM 返回后写入消息面板并回写 runtime 结果；
+    - 失败时回写 runtime failed 并在 UI 展示错误。
+  - 保持体验连续性：runtime 同步异常时不阻断对话回复渲染。
+- 修改文件:
+  - `savc-ui/public/studio/index.html`
+  - `docs/worklog/2026-02-20.md`
+- 验证结果:
+  - `pnpm --dir savc-ui exec tsc -p tsconfig.json --noEmit` 通过。
+  - `pnpm --dir savc-ui exec vite build` 通过。
+  - `POST /__savc/llm/chat` 实测（companion/dev）均返回：`ok=true`、`provider=openai-codex`、`model=gpt-5.2`。
+  - 端到端链路实测（create -> running -> llm -> succeeded）通过，`task-runtime snapshot` 可见最终 `status=succeeded` 且事件消息为 LLM 回答。
+- 备注:
+  - 如需“开发模式”改为工具优先（先走编排工具，再回填 LLM 解释），可在 `devSend()` 里再增加 tool-first 策略开关。
