chore(journal-web): 删除测试失败的 journal-web 项目

--- a/docs/worklog/2026-02-22.md
+++ b/docs/worklog/2026-02-22.md
@@ -26,3 +26,23 @@
 
 - 备注
   - 文档类改动将在本轮作为独立提交收尾，保持提交边界清晰。
+
+## 2) 删除 `journal-web` 项目（测试失败回退）
+
+- 对话目标
+  - 按用户要求移除 `savc-core/journal-web`，停止保留当前失败的测试项目。
+
+- 执行内容
+  - 通过 `git rm -r` 删除已跟踪的 `journal-web` 文件。
+  - 清理目录内残留的未跟踪构建缓存（`.next`）并移除空目录。
+  - 复查 Git 状态，确认仅保留 `journal-web` 删除记录。
+
+- 修改文件
+  - `savc-core/journal-web/**`（删除）
+  - `docs/worklog/2026-02-22.md`
+
+- 验证结果
+  - `git status --short` 显示 `savc-core/journal-web` 下文件均为 `D`（已删除待提交），无该目录残留未跟踪项。
+
+- 备注
+  - 本次为直接回退该子项目；后续如需重建可在新目录重新初始化。
